キャンセル待ちの項目を追加する

--- a/201210.rst
+++ b/201210.rst
@@ -39,6 +39,11 @@ pyspa 自体の詳細は README.rst を読む事
 
 熱海からかなり離れていることが最低条件。200 キロ以上離れてるとか。
 
+キャンセル待ち
+--------------
+
+
+
 あしながおっさん
 ----------------
 
