募集 URL を追加する

--- a/201210.rst
+++ b/201210.rst
@@ -12,6 +12,13 @@ pyspa 自体の詳細は README.rst を読む事
 :第一候補: 2012-10-26 12:00 ~ 2012-10-28 12:00
 :第二候補: 2012-10-19 12:00 ~ 2012-10-21 12:00
 
+募集
+====
+
+まったり募集中です
+
+https://docs.google.com/spreadsheet/viewform?formkey=dFd4cmNRTUw3clM5LU1NRzJTdGt5NWc6MQ#gid=0
+
 参加予定一覧
 ============
 
