とんぷーを土日にする

--- a/201210.rst
+++ b/201210.rst
@@ -49,7 +49,7 @@ https://docs.google.com/spreadsheet/viewform?formkey=dFd4cmNRTUw3clM5LU1NRzJTdGt
 - @turky
 - @kuenishi
 - @drillbits
-- @ymotongpoo
+- @ymotongpoo (土日)
 - @AHG100P
 - @akisutesama
 - @shkumagai
