--- a/201210.rst
+++ b/201210.rst
@@ -53,7 +53,7 @@ https://docs.google.com/spreadsheet/viewform?formkey=dFd4cmNRTUw3clM5LU1NRzJTdGt
 - @AHG100P
 - @akisutesama
 - @shkumagai
-- @flag_boy
+- @flag_boy (土日)
 - @yoshiori
 - @monjudoh
 - @Isoparametric
