キャンセル待ちを追加する

--- a/201210.rst
+++ b/201210.rst
@@ -71,3 +71,5 @@ https://docs.google.com/spreadsheet/viewform?formkey=dFd4cmNRTUw3clM5LU1NRzJTdGt
 - @torufurukawa
 - @hiroki_niinuma
 - @nanimosa
+- @Masahito
+- @tokoroten
