女性の場合の費用を追加する

--- a/201303.rst
+++ b/201303.rst
@@ -16,11 +16,10 @@ Python 温泉の簡易版です。なんと温泉もありません。
 
 :場所: 晴海グランドホテル
 :プラン: 小規模会議プラン http://www.kensyu.jp/pack/small.html
-:費用: トリプルで 9200 円
-         
-- 女性の場合は +1000 円でツイン
+:費用: トリプルで 9,200 円 （切りよく 10,000 円にします)
 
-  - シングルが無い
+- 女性は 12,600 円のシングルになるのでかなりキビシイです ... 。
+         
 - **禁酒**
 - 24 時間会議室
 - 24 時間ベット
