補填出来るかもしれないので、とりあえず。

--- a/201303.rst
+++ b/201303.rst
@@ -19,6 +19,8 @@ Python 温泉の簡易版です。なんと温泉もありません。
 :費用: トリプルで 9,200 円 （切りよく 10,000 円にします)
 
 - 女性は 12,600 円のシングルになるのでかなりキビシイです ... 。
+
+  - お菓子買って余ったら補填できるかも知れません
          
 - **禁酒**
 - 24 時間会議室
