--- a/201303.rst
+++ b/201303.rst
@@ -17,6 +17,8 @@ Python 温泉の簡易版です。なんと温泉もありません。
 :場所: 晴海グランドホテル
 :プラン: 小規模会議プラン http://www.kensyu.jp/pack/small.html
 :費用: トリプルで 9,200 円 （切りよく 10,000 円にします)
+:住所: 〒104-0053 東京都中央区晴海3-8-1
+:TEL: 03-3533-7111 / FAX. 03-3532-5315
 
 - 女性は 12,600 円のシングルになるのでかなりキビシイです ... 。
 
